--- a/index.html
+++ b/index.html
@@ -3,24 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <title>Frontend Mentor | Sunnyside agency landing page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    
   </style>
 </head>
 <body>
-  About
+  <div class="container">
+    <header>
+      <div class="nav">
+        <div id="logo-top"><img src="images/logo.svg"></div>
+        <div id="menu-top"><p>Services</p> <p>Projects</p> <p>Contact</p> <input type="button" id="contact" value="Contact"></div>
+      </div>
+
+      <h1>We are creatives</h1>
+
+      <img src="images/icon-arrow-down.svg" id="arow-down">
+
+      <img id="orange-header"src="images/desktop/image-header.jpg">
+    </header>
+  </div>
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/Tinhobas">Renato Bastos</a>.
+  </div>
+</body>
+</html>
+
+About
   Services
   Projects
   Contact
 
-  We are creatives
+  
 
   Transform your brand
 
@@ -59,10 +78,3 @@
   Services
   Projects
   Contact
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
-</html>
