--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
     <!-- displays site properly based on user's device -->
     <link
       rel="icon"
@@ -28,7 +31,7 @@
           </div>
         </div>
 
-        <h1>We are creatives</h1>
+        <h1>WE ARE CREATIVES</h1>
 
         <img src="images/icon-arrow-down.svg" id="arow-down" />
 
@@ -44,7 +47,7 @@
               brands grow fast. Engage your clients through compelling visuals
               that do most of the marketing for you.
             </p>
-            <p>Learn More</p>
+            <p class="learnmore">Learn More</p>
           </div>
         </div>
         <div class="linhaimg">
@@ -65,7 +68,7 @@
               photographers, videographers, and copywriters, we’ll build and
               extend your brand in digital places.
             </p>
-            <p>Learn More</p>
+            <p class="learnmore">Learn More</p>
           </div>
         </div>
       </div>
@@ -74,7 +77,7 @@
         <div class="linhaimgtxt">
           <img src="images/desktop/image-graphic-design.jpg">
           <div>
-            <div>
+            <div class="graphicdesign">
           <h2>Graphic design</h2>
           <p>Great design makes you memorable. We deliver artwork that
             underscores your brand message and captures potential clients’ attention.</p>
@@ -84,7 +87,7 @@
         <div class="linhaimgtxt">
           <img src="images/desktop/image-photography.jpg">
           <div>
-            <div>
+            <div class="photography">
           <h2>Photography</h2>
           <p>Increase your credibility by getting the most stunning, high-quality
             photos that improve your business image.</p>
