--- a/index.html
+++ b/index.html
@@ -95,22 +95,70 @@
           </div>
         </div>
       </div>
+
+      <div class="linhaclient">
+        <h2>CLIENT TESTIMONIALS</h2>
+        <div class="clientcards">
+        <div class="clientcard">
+          <img src="images/image-emily.jpg">
+          <p>We put our trust in
+            Sunnyside and they delivered, making sure our needs were met and deadlines were
+            always hit.</p>
+            <div>
+            <h3>Emily R.</h3>
+            <p class="profissao">Marketing Director</p>
+          </div>
+        </div>
+          
+        <div class="clientcard">
+          <img src="images/image-thomas.jpg">
+          <p>Sunnyside’s enthusiasm coupled with
+            their keen interest in our brand’s success made it a satisfying and enjoyable
+            experience.</p>
+            <div>
+            <h3>Thomas S.</h3>
+            <p class="profissao">Chief Operating Officer</p>
+          </div>
+        </div>
+
+        <div class="clientcard">
+          <img src="images/image-jennie.jpg">
+          <p>Incredible end result! Our sales
+            increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+            <div>
+            <h3>Jennie F.</h3>
+            <p class="profissao">Business Owner</p>
+          </div>
+        </div>
+      </div>
+      </div>
+
+      <div class="galery">
+        <img src="images/desktop/image-gallery-milkbottles.jpg">
+        <img src="images/desktop/image-gallery-orange.jpg">
+        <img src="images/desktop/image-gallery-cone.jpg">
+        <img src="images/desktop/image-gallery-sugarcubes.jpg">
+      </div>
+
+      <footer>
+        <img src="images/logo.svg" id="logofooter">
+        <label><p>About</p> <p>Services</p> <p>Projects</p></label>
+        <div class="icons">
+          <img src="images/icon-facebook.svg">
+          <img src="images/icon-instagram.svg">
+          <img src="images/icon-twitter.svg">
+          <img src="images/icon-pinterest.svg">
+        </div>
+
+        <div class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="https://github.com/Tinhobas">Renato Bastos</a>.
+        </div>
+      </footer>
     </div>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/Tinhobas">Renato Bastos</a>.
-    </div>
+    
   </body>
 </html>
-
-
-  Client testimonials We put our trust in
-Sunnyside and they delivered, making sure our needs were met and deadlines were
-always hit. Emily R. Marketing Director Sunnyside’s enthusiasm coupled with
-their keen interest in our brand’s success made it a satisfying and enjoyable
-experience. Thomas S. Chief Operating Officer Incredible end result! Our sales
-increased over 400% when we worked with Sunnyside. Highly recommended! Jennie F.
-Business Owner About Services Projects Contact
