--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
-          >. Coded by <a href="https://github.com/Tinhobas">Renato Bastos</a>.
+          >. Coded by <a href="https://github.com/ReBastos">Renato Bastos</a>.
         </div>
       </footer>
     </div>
